--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,95 +1,128 @@
-name: siyetian_study
-description: "A new Flutter project."
-
+name: agent_app_vpn
+description: "zhongqi Changing proxy ip"
+# The following line prevents the package from being accidentally published to
+# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
+# The following defines the version and build number for your application.
+# A version number is three numbers separated by dots, like 1.2.43
+# followed by an optional build number separated by a +.
+# Both the version and the builder number may be overridden in flutter
+# build by specifying --build-name and --build-number, respectively.
+# In Android, build-name is used as versionName while build-number used as versionCode.
+# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
+# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
+# Read more about iOS versioning at
+# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# In Windows, build-name is used as the major, minor, and patch parts
+# of the product and file versions while build-number is used as the build suffix.
 version: 1.2.6+3
 
 environment:
-  sdk: ^3.7.2
-dependencies:
-  dio:
+  sdk: '>=3.3.0 <4.0.0'
 
+# Dependencies specify other packages that your package needs in order to work.
+# To automatically upgrade your package dependencies to the latest versions
+# consider running `flutter pub upgrade --major-versions`. Alternatively,
+# dependencies can be manually updated by changing the version numbers below to
+# the latest version available on pub.dev. To see which dependencies have newer
+# versions available, run `flutter pub outdated`.
+dependencies:
+
+  dio: ^5.4.3+1
   flutter:
     sdk: flutter
   flutter_localizations:
       sdk: flutter
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  #安卓端实现的插件
+#  flutter_v2ray:
+#    git:
+#      url: https://github.com/H3mnz/flutter_v2ray
+#  vpn_info: ^0.0.3
 
   #苹果端实现的插件
-  dependencies:
-   clash_flt:
+  clash_flt:
     git:
       url: git@github.com:wangyogn0536/clash_flt.git
       ref: master   # 或 master，看你 fork 后默认分支
-
+  path_provider: any
   #配置VPN的插件
-  flutter_vpn:
-  flutter_v2ray: 
+  flutter_vpn: ^0.12.0
+  flutter_v2ray: ^1.0.10
   #自适应屏幕适配插件
-  flutter_screenutil:
+  flutter_screenutil: ^5.9.0
   # 用于显示隐藏 flutter 的 splash screen
-  flutter_splash_screen:
+  flutter_splash_screen: ^1.0.0+6
   # 数据缓存库
-  shared_preferences:
+  shared_preferences: ^2.0.6
   #提示吐司
-  fluttertoast:
-  flutter_smart_dialog:
+  fluttertoast: ^8.0.9
+  flutter_smart_dialog: ^4.9.6
   # InheritedWidget的包装器 ，使它们更易于使用和更可重用。
-  provider:
+  provider: ^6.0.5
   # 下拉刷新和上拉加载的库
-  pull_to_refresh:
+  pull_to_refresh: ^2.0.0
   # 右滑点击事件
-  flutter_slidable:
+  flutter_slidable: ^3.1.1
   #动画插件
-  flutter_staggered_animations:
+  flutter_staggered_animations: ^1.1.1
+
   #腾讯云验证码插件
-  flutter_tencent_captcha:
-   # 31 webView
-  webview_flutter:
+  flutter_tencent_captcha: ^0.1.2
+  # 31 webView
+  webview_flutter: ^3.0.2
+
   #获得当前手机信息唯一标识控件
-  device_info_plus:
-  uuid:
+  device_info_plus: ^10.1.0
+  uuid: ^3.0.6
   #剪切板数据
-  clipboard:
+  clipboard: ^0.1.3
+
   # 打电话、打开url、发邮件等
-  url_launcher:
+  url_launcher: ^6.3.0
+
   #  微信相关_支付
-  fluwx:
-  #支付宝相关_支付
+  # fluwx: ^3.13.1
+  fluwx: ^5.7.2
+
+  #  支付宝支付
   tobias: ^2.4.0
   #监听键盘事件
-  flutter_keyboard_visibility:
+  flutter_keyboard_visibility: ^6.0.0
   #选择器
-  flutter_picker:
-  cupertino_icons:
+  flutter_picker: ^2.1.0
+  cupertino_icons: ^1.0.6
   #获取项目的版本号和应用名称
-  package_info_plus:
-   #监听网络链接状态
-  connectivity_plus:
-  #检测是否连接了VPN
-  vpn_connection_detector:
+  package_info_plus: ^8.0.1
+  #监听网络链接状态
+  connectivity_plus: ^6.1.4
+  vpn_connection_detector: ^1.0.0
   #苹果内购插件
-  in_app_purchase: 
-  #用于升级安卓软件
-  flutter_app_update:
-   # 用于打开文件进行安装
-  open_file:
-  # MD5
-  crypto:
-   # 时间戳转换
-  intl:
-   #安卓软件更新插件
-  flutter_downloader:
-  # 安卓端访问权限:
-  permission_handler:
-#  键盘抬起控件
-  keyboard_avoider: 
-  open_file_macos: 
-  win32: 
-  event_bus: 
+  in_app_purchase: ^3.1.5
 
- 
+  #用于升级安卓软件
+  flutter_app_update: ^3.1.1
+  open_file: ^3.2.1  # 用于打开文件进行安装
+  # MD5
+  crypto: ^3.0.2
+  # 时间戳转换
+  intl: ^0.19.0
+  #安卓软件更新插件
+  flutter_downloader: ^1.11.8
+  # 安卓端访问权限:
+  permission_handler: ^10.4.3
+#  键盘抬起控件
+  keyboard_avoider: ^0.2.0
+  open_file_macos: ^0.1.0
+  win32: ^5.12.0
+  event_bus: ^2.0.1
+
+#  #后台处理监听任务
+  # background_fetch: ^1.3.8
+
+
 
 dev_dependencies:
   flutter_test:
@@ -100,7 +133,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -117,29 +150,32 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  # assets:
+  #   - images/
+  #   - assets/Country.mmdb
+  #   - assets/captcha.html
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+  # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+#   fonts:
+#     - family: Schyler
+#       fonts:
+#         - asset: fonts/Schyler-Regular.ttf
+#         - asset: fonts/Schyler-Italic.ttf
+#           style: italic
+#     - family: Trajan Pro
+#       fonts:
+#         - asset: fonts/TrajanPro.ttf
+#         - asset: fonts/TrajanPro_Bold.ttf
+#           weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  # see https://flutter.dev/custom-fonts/#from-packages
